- Changed `._source.Title` to `.Source.Title` - Fixed `href` attribute syntax in the link - Adjusted content field reference to `.Source.Content`

--- a/views/search_results.html
+++ b/views/search_results.html
@@ -1,8 +1,8 @@
 {{range .}}
 <div class="search-result">
-    <h2>{{._source.Title}}</h2>
-    <p>{{truncate ._source.content 200}}</p>
-    <a href="{{._source.URL}}">Read more</a>
+    <h2>{{.Source.Title}}</h2>
+    <p>{{truncate .Source.Content 200}}</p>
+    <a href="{{.Source.URL}}">Read more</a>
 </div>
 {{else}}
 <p>No results found.</p>
